# axum-starter

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: app.rs  config.rs  main.rs
src/app/: error.rs  routers.rs
src/app/handlers/: health.rs  users.rs
src/app/handlers/users/: get_by_id.rs
src/app/routers/: health.rs
