[package]
name = "axum-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4" }
axum-tracing-opentelemetry = "0.29.0"
clap = { version = "4.5.37", features = ["derive", "env"] }
dotenv = "0.15.0"
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["tokio"] }
opentelemetry-otlp = { version = "0.30.0", features = [
  "grpc-tonic",
  "tokio",
  "tonic",
] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = [
  "chrono",
  "runtime-tokio-rustls",
  "sqlite",
  "uuid",
] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["tracing"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
